Correction from sonar found violations.